// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleLinkComponent should match snapshot with default props 1`] = `
<div
  id="root5"
>
  <a
    class="circle-link"
    href="https://example.com"
    rel="noopener"
    target="_blank"
    title="Test Title"
  >
    <img
      height="30"
      src="test-image.jpg"
      width="30"
    />
  </a>
</div>
`;

exports[`CircleLinkComponent should match snapshot with different props 1`] = `
<div
  id="root7"
>
  <a
    class="circle-link"
    href="https://angular.io"
    rel="noopener"
    target="_blank"
    title="Documentation"
  >
    <img
      height="30"
      src="angular-logo.png"
      width="30"
    />
  </a>
</div>
`;

exports[`CircleLinkComponent should match snapshot with special characters in title 1`] = `
<div
  id="root9"
>
  <a
    class="circle-link"
    href="https://example.com/path?param=value"
    rel="noopener"
    target="_blank"
    title="My Awesome App & More!"
  >
    <img
      height="30"
      src="icon-with-special-chars.svg"
      width="30"
    />
  </a>
</div>
`;
